--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,8 @@
 # Ignore master key for decrypting credentials and more.
 /config/master.key
 
+/config/secrets.yml
+
 # Ignore public, as it is built on deploy
 # Place files for /public in /client/public
 /public
